// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Badge demo -- badge 1`] = `
.emotion-140 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-140 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-20 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-20 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-20 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-20 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-20 .uc-fe-numberinput-handler-up,
.emotion-20 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-20 .uc-fe-numberinput-handler-up:hover,
.emotion-20 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-20 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-20 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-20 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-20 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20:hover {
  border-color: #c3cad9;
}

.emotion-20 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-20 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-20 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-20 .uc-fe-numberinput-handler-up,
.emotion-20 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-20 .uc-fe-numberinput-handler-up:hover,
.emotion-20 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-20 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-20 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-16 {
  vertical-align: baseline;
}

.emotion-41 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-41:hover {
  border-color: #3357df;
}

.emotion-41:hover .emotion-38 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-41 .emotion-38 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-41 .emotion-36 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-41 .emotion-40 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-41 .emotion-32,
.emotion-41 .emotion-34 {
  line-height: 16px;
}

.emotion-41 .emotion-32 {
  padding-right: 20px;
}

.emotion-41 .emotion-34 {
  padding-left: 20px;
}

.emotion-41 .emotion-32 {
  display: none;
}

.emotion-39 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-33 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-37 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-114 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-114 .uc-fe-radio-styletype-default,
.emotion-114 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-114 .uc-fe-radio-styletype-default:last-child,
.emotion-114 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-114 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-114 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-114 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-114 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-114 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-114 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-97 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-97 > * {
  font-size: 12px;
}

.emotion-97 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-97 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-97 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-97:hover .uc-fe-radio-icon-wrap,
.emotion-97.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-97.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-97.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-97.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-97.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-97.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-94 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-146 {
  position: relative;
  display: inline-block;
}

.emotion-144 {
  position: absolute;
}

.emotion-142 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-142.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-140 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-140 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-20 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-20 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-20 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-20 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-20 .uc-fe-numberinput-handler-up,
.emotion-20 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-20 .uc-fe-numberinput-handler-up:hover,
.emotion-20 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-20 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-20 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-20 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-20 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-20:hover {
  border-color: #c3cad9;
}

.emotion-20 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-20 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-20 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-20 .uc-fe-numberinput-handler-up,
.emotion-20 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-20 .uc-fe-numberinput-handler-up:hover,
.emotion-20 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-20 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-20 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-16 {
  vertical-align: baseline;
}

.emotion-41 {
  position: relative;
  border-radius: 2px;
  box-sizing: border-box;
  cursor: pointer;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  background: #ffffff;
  height: 28px;
  width: 80px;
  padding: 4px;
  border: 1px solid #c3cad9;
  border-width: 1px;
  line-height: 16px;
}

.emotion-41:hover {
  border-color: #3357df;
}

.emotion-41:hover .emotion-38 {
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-41 .emotion-38 {
  background: #ffffff;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  width: 20px;
  height: 20px;
}

.emotion-41 .emotion-36 {
  background: #f44336;
  left: 13px;
  height: 10px;
}

.emotion-41 .emotion-40 {
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #f6f6fb;
}

.emotion-41 .emotion-32,
.emotion-41 .emotion-34 {
  line-height: 16px;
}

.emotion-41 .emotion-32 {
  padding-right: 20px;
}

.emotion-41 .emotion-34 {
  padding-left: 20px;
}

.emotion-41 .emotion-32 {
  display: none;
}

.emotion-39 {
  position: relative;
  height: 100%;
  width: 100%;
  border-radius: 2px;
  box-sizing: border-box;
}

.emotion-31 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-33 {
  width: 100%;
  height: 100%;
  text-align: center;
  line-height: 22px;
  box-sizing: border-box;
  display: block;
}

.emotion-37 {
  position: absolute;
  display: inline-block;
  left: -1px;
  top: -2px;
  border-radius: 2px;
  box-sizing: border-box;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-35 {
  position: absolute;
  display: inline-block;
  left: 18px;
  top: 4px;
  width: 2px;
  height: 16px;
  border-radius: 1px;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.emotion-114 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-114 .uc-fe-radio-styletype-default,
.emotion-114 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-114 .uc-fe-radio-styletype-default:last-child,
.emotion-114 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-114 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-114 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-114 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-114 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-114 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-114 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-97 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-97 > * {
  font-size: 12px;
}

.emotion-97 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-97 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-97 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-97:hover .uc-fe-radio-icon-wrap,
.emotion-97.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-97.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-97.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-97.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-97.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-97.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-94 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-146 {
  position: relative;
  display: inline-block;
}

.emotion-144 {
  position: absolute;
}

.emotion-142 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-142.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-140 emotion-141"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        value
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-5 emotion-6"
        >
          <span
            class="emotion-3 emotion-4"
          >
            <input
              value="1"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        maxValue
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-20 emotion-21"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-16 emotion-17"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-16 emotion-17"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="99"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        dot
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class=" emotion-41 emotion-42"
        >
          <div
            class="emotion-39 emotion-40"
          >
            <span
              class="emotion-31 emotion-32"
            >
              ON
            </span>
            <span
              class="emotion-33 emotion-34"
            >
              OFF
            </span>
            <span
              class="emotion-37 emotion-38"
            >
              <span
                class="emotion-35 emotion-36"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        hideWhenZero
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class=" emotion-41 emotion-42"
        >
          <div
            class="emotion-39 emotion-40"
          >
            <span
              class="emotion-31 emotion-32"
            >
              ON
            </span>
            <span
              class="emotion-33 emotion-34"
            >
              OFF
            </span>
            <span
              class="emotion-37 emotion-38"
            >
              <span
                class="emotion-35 emotion-36"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        noneContent
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class=" emotion-41 emotion-42"
        >
          <div
            class="emotion-39 emotion-40"
          >
            <span
              class="emotion-31 emotion-32"
            >
              ON
            </span>
            <span
              class="emotion-33 emotion-34"
            >
              OFF
            </span>
            <span
              class="emotion-37 emotion-38"
            >
              <span
                class="emotion-35 emotion-36"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        placement
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="emotion-114 emotion-982"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-96 emotion-97 emotion-98"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-94 emotion-95"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              topRight
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-96 emotion-97 emotion-98"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-94 emotion-95"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              topLeft
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-96 emotion-97 emotion-98"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-94 emotion-95"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottomRight
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-96 emotion-97 emotion-98"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-94 emotion-95"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              bottomLeft
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        badgeStyle.color
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        badgeStyle.background
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <input
          type="color"
        />
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-badge emotion-146 emotion-147"
      style="margin:10px"
    >
      <div
        style="width:50px;height:50px;background:#ddd"
      />
      <div
        class="uc-fe-badge-badge-wrap emotion-144 emotion-145"
      >
        <span
          class="uc-fe-badge-badge emotion-142 emotion-143"
        >
          1
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- bubble 1`] = `
.emotion-121 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-121 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-72 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-72 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-72 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-72 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-72 .uc-fe-numberinput-handler-up,
.emotion-72 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-72 .uc-fe-numberinput-handler-up:hover,
.emotion-72 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-72 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-72 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-72 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-72 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72:hover {
  border-color: #c3cad9;
}

.emotion-72 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-72 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-72 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-72 .uc-fe-numberinput-handler-up,
.emotion-72 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-72 .uc-fe-numberinput-handler-up:hover,
.emotion-72 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-72 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-72 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-68 {
  vertical-align: baseline;
}

.emotion-36 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-36 .uc-fe-radio-styletype-default,
.emotion-36 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-36 .uc-fe-radio-styletype-default:last-child,
.emotion-36 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-36 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-36 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-36 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-36 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-36 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-36 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-19 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-19 > * {
  font-size: 12px;
}

.emotion-19 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-19 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-19 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-19:hover .uc-fe-radio-icon-wrap,
.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-19.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-19.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-16 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-125 {
  position: relative;
  display: inline-block;
}

.emotion-100 {
  position: relative;
}

.emotion-100 > .uc-fe-combine-item {
  vertical-align: middle;
  display: inline-block;
}

.emotion-100 > .uc-fe-combine-item+.uc-fe-combine-item {
  margin-left: 12px;
}

.emotion-100 > .uc-fe-combine-item+.uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-100 > .uc-fe-combine-item+.uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-98 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-98:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-123 {
  position: absolute;
  line-height: 20px;
  padding: 0 4px;
  font-size: 14px;
  font-weight: bold;
  color: #ffffff;
  background: #f9ce1d;
}

.emotion-123::after {
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  left: 4px;
  bottom: -5px;
  border-style: solid;
  border-width: 5px 5px 0 0;
  border-color: #f9ce1d transparent transparent transparent;
}

.emotion-121 .uc-fe-form-item {
  margin-bottom: 16px;
}

.emotion-121 .uc-fe-form-item:last-child {
  margin-bottom: 0;
}

.emotion-11 {
  position: relative;
  display: block;
  height: auto;
  margin-left: -8px;
  margin-right: -8px;
}

.emotion-11:before,
.emotion-11:after {
  content: ' ';
  display: table;
}

.emotion-11:after {
  clear: both;
}

.emotion-11 > .uc-fe-col {
  padding-left: 8px;
  padding-right: 8px;
}

.emotion-1 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 25%;
  padding-top: 4px;
  line-height: 20px;
  word-break: break-all;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-8 {
  position: relative;
  display: block;
  box-sizing: border-box;
  min-height: 1px;
  float: left;
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
  width: 75%;
}

.emotion-5 {
  position: relative;
  display: inline-block;
  vertical-align: middle;
  box-sizing: border-box;
  border-radius: 2px;
  height: 28px;
  color: #526075;
  border: 1px solid #d2d6ea;
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
  -webkit-transition: .18s cubic-bezier(.4,0,.2,1);
  transition: .18s cubic-bezier(.4,0,.2,1);
}

.emotion-5.uc-fe-input-block {
  display: block;
}

.emotion-5 input {
  vertical-align: middle;
  display: table-cell;
  box-sizing: border-box;
  width: 100%;
  padding: 0px 8px;
  margin: 0;
  font-size: inherit;
  color: inherit;
}

.emotion-5 input,
.emotion-5 input:hover,
.emotion-5 input:focus {
  border: none;
  outline: none;
  background: none;
}

.emotion-5:hover {
  color: #0a1633;
  border-color: #c3cad9;
  background: #fafafc;
}

.emotion-5 input {
  line-height: 26px;
  height: 26px;
}

.emotion-5 input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-5 input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-3 {
  display: table;
  width: 100%;
}

.emotion-72 {
  position: relative;
  box-sizing: border-box;
  border-radius: 2px;
  color: #0a1633;
  height: 28px;
  display: inline-block;
  vertical-align: middle;
  border: 1px solid #d2d6ea;
  padding-right: 22px;
  border-right-width: 0;
}

.emotion-72 .uc-fe-numberinput-input-wrap {
  position: relative;
}

.emotion-72 .uc-fe-numberinput-input {
  border: none;
  outline: none;
  padding: 0;
  margin: 0;
  color: inherit;
}

.emotion-72 .uc-fe-numberinput-suffix {
  color: #7a8baa;
  margin: 0 4px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-72 .uc-fe-numberinput-handler-up,
.emotion-72 .uc-fe-numberinput-handler-down {
  position: absolute;
  box-sizing: border-box;
  text-align: center;
  border-radius: 2px;
  border-style: solid;
  cursor: pointer;
  color: #0a1633;
  border-color: #d2d6ea;
  box-shadow: 0 1px 2px 0 rgba(0,0,0,0.08),0 1px 1px -1px rgba(0,0,0,0.30),0 1px 3px -1px rgba(0,0,0,0.12),inset 0 1px 0 0 rgba(0,0,0,0.05);
  background: #ffffff;
  display: inline-block;
  vertical-align: middle;
}

.emotion-72 .uc-fe-numberinput-handler-up:hover,
.emotion-72 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
  box-shadow: 0 0 1px 0 rgba(0,0,0,0.12),0 8px 12px -4px rgba(0,0,0,0.12),0 2px 1px -1px rgba(0,0,0,0.05);
}

.emotion-72 .uc-fe-numberinput-handler-up.uc-fe-numberinput-handler-disabled,
.emotion-72 .uc-fe-numberinput-handler-down.uc-fe-numberinput-handler-disabled {
  cursor: not-allowed;
  pointer-events: none;
  color: #cccccc;
  border-color: #c3cad9;
}

.emotion-72 .uc-fe-numberinput-input {
  line-height: 26px;
  height: 26px;
  display: inline-block;
  vertical-align: middle;
}

.emotion-72 .uc-fe-numberinput-input::-webkit-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72 .uc-fe-numberinput-input::-moz-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72 .uc-fe-numberinput-input:-ms-input-placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72 .uc-fe-numberinput-input::placeholder {
  opacity: 1;
  color: rgba(10,22,51,0.20);
}

.emotion-72:hover {
  border-color: #c3cad9;
}

.emotion-72 .uc-fe-numberinput-input-wrap {
  box-shadow: inset 0 1px 3px 0 #d2d6ea;
  background: #fafafc;
}

.emotion-72 .uc-fe-numberinput-input-wrap:hover {
  background: #f6f6fb;
}

.emotion-72 .uc-fe-numberinput-input {
  padding: 0 0 0 8px;
  text-align: left;
  box-shadow: none;
  background: transparent;
  width: 34px;
}

.emotion-72 .uc-fe-numberinput-handler-up,
.emotion-72 .uc-fe-numberinput-handler-down {
  right: 0;
  box-sizing: content-box;
  border-radius: 0;
  height: 13px;
  line-height: 13px;
  width: 22px;
}

.emotion-72 .uc-fe-numberinput-handler-up:hover,
.emotion-72 .uc-fe-numberinput-handler-down:hover {
  color: #3860f4;
}

.emotion-72 .uc-fe-numberinput-handler-up {
  border-width: 0 0 0 1px;
  top: -1px;
  padding-top: 1px;
}

.emotion-72 .uc-fe-numberinput-handler-down {
  border-width: 1px 0 0 1px;
  bottom: 0;
  border-top-color: #c3cad9;
}

.emotion-68 {
  vertical-align: baseline;
}

.emotion-36 {
  position: relative;
  margin-bottom: -8px;
}

.emotion-36 .uc-fe-radio-styletype-default,
.emotion-36 .uc-fe-radio-styletype-tag {
  margin-right: 8px;
  margin-bottom: 8px;
}

.emotion-36 .uc-fe-radio-styletype-default:last-child,
.emotion-36 .uc-fe-radio-styletype-tag:last-child {
  margin-right: 0;
}

.emotion-36 .uc-fe-radio-styletype-card {
  margin-right: 12px;
  margin-bottom: 8px;
}

.emotion-36 .uc-fe-radio-styletype-card:last-child {
  margin-right: 0;
}

.emotion-36 .uc-fe-radio-styletype-text+.uc-fe-radio-styletype-text {
  margin-left: -1px;
}

.emotion-36 .uc-fe-radio-styletype-button {
  margin-right: -1px;
  margin-bottom: 8px;
}

.emotion-36 .uc-fe-radio-styletype-button:first-of-type {
  border-radius: 2px 0 0 2px;
}

.emotion-36 .uc-fe-radio-styletype-button:last-of-type {
  border-radius: 0 2px 2px 0;
  margin-right: 0;
}

.emotion-19 {
  color: #526075;
  font-size: 12px;
  position: relative;
  cursor: pointer;
  display: inline-block;
  vertical-align: middle;
  min-height: 28px;
  line-height: 28px;
  font-size: 0;
  color: #0a1633;
}

.emotion-19 > * {
  font-size: 12px;
}

.emotion-19 .uc-fe-radio-icon-wrap {
  display: inline-block;
  box-sizing: border-box;
  overflow: hidden;
  position: relative;
  width: 14px;
  height: 14px;
  border: 1px solid #c3cad9;
  border-radius: 8px;
  vertical-align: middle;
}

.emotion-19 .uc-fe-radio-icon-wrap .uc-fe-radio-icon {
  visibility: hidden;
  opacity: 0;
  position: absolute;
  top: -1px;
  left: -1px;
}

.emotion-19 .uc-fe-radio-content {
  display: inline-block;
  vertical-align: middle;
  max-height: 100%;
  margin-left: 8px;
}

.emotion-19:hover .uc-fe-radio-icon-wrap,
.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  border-color: #3860f4;
}

.emotion-19.uc-fe-radio-checked .uc-fe-radio-icon {
  visibility: visible;
  opacity: 1;
  fill: #3860f4;
}

.emotion-19.uc-fe-radio-disabled {
  cursor: default;
  color: #cccccc;
}

.emotion-19.uc-fe-radio-disabled .uc-fe-radio-icon-wrap {
  border-color: #d9d9d9;
  background: #f7f7f7;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon {
  fill: #cccccc;
}

.emotion-19.uc-fe-radio-disabled.uc-fe-radio-checked .uc-fe-radio-icon-wrap {
  background: none;
}

.emotion-16 {
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  display: inline-block;
  vertical-align: middle;
  width: 14px;
  height: 14px;
}

.emotion-125 {
  position: relative;
  display: inline-block;
}

.emotion-100 {
  position: relative;
}

.emotion-100 > .uc-fe-combine-item {
  vertical-align: middle;
  display: inline-block;
}

.emotion-100 > .uc-fe-combine-item+.uc-fe-combine-item {
  margin-left: 12px;
}

.emotion-100 > .uc-fe-combine-item+.uc-fe-combine-item:focus {
  z-index: 2;
}

.emotion-100 > .uc-fe-combine-item+.uc-fe-combine-item:hover {
  z-index: 3;
}

.emotion-98 {
  margin: 0;
  box-sizing: border-box;
  border-radius: 2px;
  border-width: 1px;
  border-style: solid;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  outline: none;
  font-size: 12px;
  display: inline-block;
  vertical-align: middle;
  height: 28px;
  padding: 0 8px;
  color: #ffffff;
  fill: #ffffff;
  border: none;
  background: linear-gradient(135deg,#6488fc 0%,#3860f4 100%);
  box-shadow: 0 1px 3px -1px #5c76e8;
  -webkit-transition: all .22s cubic-bezier(.4,0,.2,1);
  transition: all .22s cubic-bezier(.4,0,.2,1);
}

.emotion-98:hover {
  background: linear-gradient(135deg,#5c76e8 0%,#3357df 100%);
  box-shadow: 0 5px 8px -4px #5c76e8;
}

.emotion-123 {
  position: absolute;
  line-height: 20px;
  padding: 0 4px;
  font-size: 14px;
  font-weight: bold;
  color: #ffffff;
  background: #f9ce1d;
}

.emotion-123::after {
  content: '';
  width: 0;
  height: 0;
  position: absolute;
  left: 4px;
  bottom: -5px;
  border-style: solid;
  border-width: 5px 5px 0 0;
  border-color: #f9ce1d transparent transparent transparent;
}

<div>
  <form
    class="uc-fe-form demo-form emotion-121 emotion-122"
  >
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        bubble
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <span
          class="uc-fe-input emotion-5 emotion-6"
        >
          <span
            class="emotion-3 emotion-4"
          >
            <input
              value="bubble"
            />
          </span>
        </span>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        styleType
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="emotion-36 emotion-202"
        >
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              yellow
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              orange
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              gray
            </span>
          </span>
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              purple
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        size
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="emotion-36 emotion-202"
        >
          <span
            class="uc-fe-radio uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              sm
            </span>
          </span>
          <span
            checked=""
            class="uc-fe-radio uc-fe-radio-checked uc-fe-radio-size-md uc-fe-radio-styletype-default emotion-18 emotion-19 emotion-20"
          >
            <span
              class="uc-fe-radio-icon-wrap"
            >
              <svg
                class="uc-fe-radio-icon emotion-16 emotion-17"
                viewBox="0 0 24 24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="6"
                />
              </svg>
            </span>
            <span
              class="uc-fe-radio-content"
            >
              md
            </span>
          </span>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        offset[0]
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-72 emotion-73"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-68 emotion-69"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-68 emotion-69"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="12"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        offset[1]
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-numberinput uc-fe-numberinput-styletype-default emotion-72 emotion-73"
        >
          <div>
            <span
              class="uc-fe-numberinput-handler-up"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-up emotion-68 emotion-69"
              />
            </span>
            <span
              class="uc-fe-numberinput-handler-down"
              unselectable="unselectable"
            >
              <i
                class="uc-fe-icon icon__caret-down emotion-68 emotion-69"
              />
            </span>
          </div>
          <div
            class="uc-fe-numberinput-input-wrap"
          >
            <input
              autocomplete="off"
              class="uc-fe-numberinput-input"
              min="-9007199254740991"
              step="1"
              value="-4"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        customStyle.bubbleColor
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-combine emotion-100 emotion-101"
          spacing="md"
        >
          <input
            class="uc-fe-combine-item"
            type="color"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-item emotion-98 emotion-99"
            type="button"
          >
            Remove Color
          </button>
        </div>
      </div>
    </div>
    <div
      class="uc-fe-row uc-fe-form-item emotion-10 emotion-11 emotion-12"
    >
      <div
        class="uc-fe-col uc-fe-form-label emotion-0 emotion-1 emotion-2"
        span="3"
      >
        customStyle.bubbleBackground
      </div>
      <div
        class="uc-fe-col uc-fe-form-controller emotion-7 emotion-8 emotion-2"
        span="9"
      >
        <div
          class="uc-fe-combine emotion-100 emotion-101"
          spacing="md"
        >
          <input
            class="uc-fe-combine-item"
            type="color"
          />
          <button
            class="uc-fe-button uc-fe-button-size-md uc-fe-button-styletype-primary uc-fe-combine-item emotion-98 emotion-99"
            type="button"
          >
            Remove Background
          </button>
        </div>
      </div>
    </div>
  </form>
  <div
    class="demo-wrap"
  >
    <div
      class="uc-fe-badge emotion-125 emotion-126"
      style="margin:10px"
    >
      <div
        style="width:50px;height:50px;background:#ddd"
      />
      <div
        class="uc-fe-badge-bubble-wrap emotion-123 emotion-124"
      >
        bubble
      </div>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customStyle 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
        style="background:white;color:black;border:1px solid #ddd"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge uc-fe-badge-badge-dot emotion-0 emotion-1"
        style="background:blue"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- customValue 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        string
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        <span
          style="font-weight:bolder"
        >
          node
        </span>
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- dot 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge uc-fe-badge-badge-dot emotion-0 emotion-1"
      />
    </div>
  </div>
</div>
`;

exports[`Badge demo -- hideWhenZero 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        0
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
  </div>
</div>
`;

exports[`Badge demo -- maxValue 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        10
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        9+
      </span>
    </div>
  </div>
</div>
`;

exports[`Badge demo -- noneContent 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <span
      class="uc-fe-badge-badge emotion-0 emotion-1"
    >
      99+
    </span>
  </div>
</div>
`;

exports[`Badge demo -- placement 1`] = `
.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

.emotion-4 {
  position: relative;
  display: inline-block;
}

.emotion-2 {
  position: absolute;
}

.emotion-0 {
  display: inline-block;
  min-height: 20px;
  line-height: 20px;
  min-width: 10px;
  padding: 0 5px;
  border-radius: 10px;
  text-align: center;
  background: red;
  color: white;
}

.emotion-0.uc-fe-badge-badge-dot {
  width: 10px;
  height: 10px;
  padding: 0;
  border-radius: 5px;
  min-width: 0;
  min-height: 0;
}

<div
  class="demo-wrap"
>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        99+
      </span>
    </div>
  </div>
  <div
    class="uc-fe-badge emotion-4 emotion-5"
    style="margin-top:10px;margin-right:50px;display:inline-block"
  >
    <div
      style="width:50px;height:50px;background:#ddd"
    />
    <div
      class="uc-fe-badge-badge-wrap emotion-2 emotion-3"
    >
      <span
        class="uc-fe-badge-badge emotion-0 emotion-1"
      >
        99+
      </span>
    </div>
  </div>
</div>
`;
